# QuietSpace-Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKEND_REFERENCE.md  CI-CD-FLOW.md  CONVERSION_GUIDE.md  DEPLOYMENT.md  Dockerfile  FASTAPI_MIGRATION_COMPLETION_PLAN.md  FASTAPI_MIGRATION_PLAN.md  FUNCTIONAL_PARITY_ANALYSIS.md  LICENSE.md  README.md  alembic.ini  build.gradle.kts  docker-compose-dev.yaml  docker-compose-maven.yaml  docker-compose.yaml  docker-compose.yml  drop-and-create.sql  pom.xml  pyproject.toml  qodana.yaml  quietspace  settings.gradle.kts
.github/workflows/: ci-backend.yml  ci-cd.yml  pipeline-monolith.yml  qodana_code_quality.yml  security-scan.yml
.kilo/plans/: 1783702534633-modelattribute-to-requestpart.md
alembic/: env.py
alembic/versions/: 0b0ea170c0a7_add_blocked_users_table.py  258cffccf9de_add_repost_fields_to_post.py  add_activation_code_columns.py  add_chat_deleted_at.py  add_message_deleted_at.py  add_poll_tables.py  add_user_deleted_at.py  add_user_name_indexes.py  c008ed6aecb7_add_depth_and_composite_index_to_comment.py  d8174bcf9606_initial.py
app/: celery_app.py  main.py
app/api/: deps.py
app/config/: database.py  redis.py  settings.py
app/core/: audit.py  cache.py  exceptions.py  middleware.py  rate_limiter.py  security.py  unit_of_work.py
app/enums/: __init__.py  email_template.py  entity_type.py  event_type.py  notification_type.py  permission.py  reaction_type.py  role.py  status_type.py  websocket_event_type.py
app/models/: __init__.py  base.py  blocked_user.py  chat.py  chat_participant.py  comment.py  message.py  notification.py  photo.py  poll.py  post.py  profile_settings.py  reaction.py  saved_post.py  token.py  user.py  user_follow.py  websocket_event.py
app/repositories/: base.py  blocked_user.py  chat.py  comment.py  message.py  notification.py  photo.py  poll.py  post.py  profile_settings.py  reaction.py  token.py  user.py
app/schemas/: blocked_user.py  chat.py  comment.py  common.py  health.py  message.py  notification.py  pagination.py  photo.py  poll.py  post.py  profile_settings.py  reaction.py  user.py
app/services/: auth_service.py  block_service.py  chat_service.py  comment_service.py  email_service.py  message_service.py  notification_service.py  photo_service.py  poll_service.py  post_service.py  reaction_service.py  user_service.py  websocket_service.py
app/tasks/: image_tasks.py
docker/: docker-compose-dev.yaml  docker-compose-maven.yaml  docker-compose.yaml
docs/: API_ENDPOINT_COMPARISON_REPORT.md  ARCHITECTURE_COMPARISON.md  FASTAPI_IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_PLAN.md  REST_ENDPOINT_COMPARISON_REPORT.md  USAGE.md  WEBSOCKET_ENDPOINT_COMPARISON_REPORT.md  usage-guide.md
legacy/: RUNNING.md  SESSION_CHANGES.md  pom.xml
plans/: DEPRECATED_ENDPOINTS.md  REST_IMPLEMENTATION_PLAN.md  WEBSOCKET_IMPLEMENTATION_PLAN.md
scripts/: cleanup_tokens.py  locustfile.py  seed_db.py
tests/: conftest.py
(+916 files in other folders)
