[tool.poetry]
name = "quietspace"
version = "0.1.0"
description = "Backend for QuietSpace social app"
authors = ["Thural"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
uvicorn = {extras = ["standard"], version = "0.34.0"}
pydantic = "2.12.5"
pydantic-settings = "2.7.1"
sqlmodel = "0.0.39"
asyncpg = "0.31.0"
alembic = "1.14.1"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.20"
itsdangerous = "2.2.0"
slowapi = "0.1.10"
celery = "5.5.0"
redis = "5.2.1"
structlog = "25.2.0"
websockets = "14.1"
python-socketio = "5.13.0"
aiohttp = "3.14.1"
fastapi-mail = "1.5.0"
jinja2 = "3.1.6"
pillow = "12.3.0"
python-magic = "0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "0.25.0"
httpx = "0.28.1"
pytest-cov = "6.1.0"
poetry-core = "1.9.1"
black = "25.1.0"
ruff = "0.8.4"
mypy = "1.13.0"
pre-commit = "4.0.1"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
